<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/id"/>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/name"/>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/mass"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"/>
    <ListView
        android:id="@android:id/list"
        android:orientation="vertical"
        android:layout_marginTop="22dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    </ListView>
</RelativeLayout>


